Fix aria label. Include dark mode journal styling.

--- a/less/v2/dark/actors.less
+++ b/less/v2/dark/actors.less
@@ -7,11 +7,6 @@
 
   .textbox textarea { color: var(--dnd5e-color-blue-white); }
 
-  .content-link, .roll-link a, .reference-link a, .inline-roll, .award-link {
-    background: var(--dnd5e-color-dark-gray);
-    border-color: var(--dnd5e-border-dark)
-  }
-
   .effects-element .conditions-list .condition.content-link {
     background: unset;
     border-color: var(--dnd5e-color-blue-gray-3);
