--- a/less/v2/dark/apps.less
+++ b/less/v2/dark/apps.less
@@ -19,7 +19,6 @@
 
     .window-content { background: var(--dnd5e-color-dark-gray) url("../../ui/denim075.png"); }
 
-    select option { background: var(--dnd5e-color-blue-gray-2); }
     .window-resizable-handle { filter: invert(1); }
 
     .card .header {
