--- a/less/v2/journal.less
+++ b/less/v2/journal.less
@@ -239,6 +239,7 @@
         border-color: var(--dnd5e-color-gold);
 
         tr:nth-child(n) { background: unset; }
+        td { word-break: normal; }
       }
 
       tr:nth-child(even) { background-color: var(--dnd5e-color-table-row-even); }
